# Login-System

./: CMakeLists.txt  README.md  accounts.json  plan.txt
include/: base_functions.h  json.hpp  login.h  manager.h  string_checker.h
src/: base_functions.cpp  login.cpp  main.cpp  manager.cpp  string_checker.cpp
